# DaunoisChessReborn

./: .gitignore  README.md  angular.json  eslint.config.js  eslint.config.mjs  package-lock.json  package.json
DaunoisChessReborn/: README.md  angular.json  package-lock.json  package.json
DaunoisChessReborn/src/: index.html
DaunoisChessReborn/src/app/: app.component.html  app.component.ts  app.module.ts
DaunoisChessReborn/src/app/chess-board/: board.service.ts  chess-board.component.html  chess-board.component.scss  chess-board.component.spec.ts  chess-board.component.ts
DaunoisChessReborn/src/app/chess-board-arrow/: board-arrow.service.ts
DaunoisChessReborn/src/backend/: http-server-stockfish.py
mywebsite/: package-lock.json  package.json
mywebsite/DaunoisChessReborn/: package-lock.json
mywebsite/src/: stores.ts
mywebsite/src/board/: board.svelte
mywebsite/src/menu/: general_menu.svelte
mywebsite/src/routes/: +page.svelte
src/: index.html  main.ts  proxy.conf.json
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  game.store.ts
src/app/game-menu/: fen-validator.directive.ts  game-menu.component.html  game-menu.component.scss  game-menu.component.spec.ts  game-menu.component.ts  gameSettings.ts
src/app/game-status/: game-status.component.html  game-status.component.spec.ts  game-status.component.ts
src/app/move-board/: move-board.component.html  move-board.component.ts
src/backend/: http-server-stockfish.py  pyproject.toml
website/: home.html
(+45 files in other folders)
